// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render a default input 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <div
      class="flex relative flex-1 h-full"
    >
      <input
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="Input"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render as custom element 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <div
      class="flex relative flex-1 h-full"
    >
      <select
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="Input"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with addons 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <span>
      start
    </span>
    <div
      class="flex relative flex-1 h-full"
    >
      <input
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="Input"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
    >
      <div
        class=""
      >
        <span>
          end
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with focus 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <div
      class="flex relative flex-1 h-full"
    >
      <input
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="Input"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with invalid 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jXtMoQ"
  >
    <div
      class="flex relative flex-1 h-full"
    >
      <input
        aria-invalid="true"
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="Input"
        value=""
      />
    </div>
    <div
      class="flex items-center space-x-3 divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
    >
      <span
        data-errortext="Field invalid"
        data-testid="Input__error"
      >
        <div
          class="sc-bdfBwQ iyevwF text-theme-danger-500"
          height="20"
          width="20"
        >
          <svg>
            alert-warning.svg
          </svg>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input should render with suggestion 1`] = `
<DocumentFragment>
  <div
    class="fixed invisible w-auto whitespace-nowrap"
  >
    …
  </div>
  <div
    class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
  >
    <div
      class="flex relative flex-1 h-full"
    >
      <input
        class="p-0 w-full bg-transparent border-none focus:ring-0 Input__InputStyled-wu99qs-1 ioFtLo no-ligatures"
        data-testid="Input"
        value=""
      />
      <span
        class="flex absolute inset-y-0 items-center w-full font-normal opacity-50 pointer-events-none"
        data-testid="Input__suggestion"
      >
        <span
          class="truncate"
        >
          suggestion
        </span>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
